# audio_blackbox

./: .env.example  .gitignore  ACKNOWLEDGMENTS.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  ExportOptions.plist  ExportOptionsLocal.plist  Info.plist  LICENSE  Makefile  NEXT_STEPS.md  README.md  SETUP.md  blackbox.toml  build_and_run_macos.sh  com.blackbox.audiorecorder.plist  com.dollhousemediatech.blackbox.plist  run_menubar.sh  test_recorder.sh
.github/: dependabot.yml
.github/workflows/: codeql.yml  coverage.yml  ignored-tests.yml  metadata-lint.yml  release.yml  rust.yml
BlackBoxApp/: BlackBox.entitlements  Gemfile  project.yml
BlackBoxApp/BlackBoxApp/: AboutView.swift  BlackBoxApp.swift  GlobalHotkeyManager.swift  Info.plist  Localizable.xcstrings  MeterView.swift  OnboardingView.swift  PrivacyInfo.xcprivacy  RecordingState.swift  RustBridge.swift  SettingsKeys.swift  SettingsView.swift
BlackBoxApp/BlackBoxApp.xcodeproj/: project.pbxproj
BlackBoxApp/BlackBoxApp.xcodeproj/xcshareddata/xcschemes/: BlackBoxApp.xcscheme
BlackBoxApp/BlackBoxAppTests/: CoreTests.swift  SleepWakeTests.swift
BlackBoxApp/bridge/: blackbox_ffi.h  module.modulemap
BlackBoxApp/fastlane/: .gitignore  Appfile  Fastfile  README.md  age_rating_config.json
BlackBoxApp/fastlane/metadata/en-US/: copyright.txt  description.txt  keywords.txt  marketing_url.txt  name.txt  privacy_url.txt  promotional_text.txt  release_notes.txt  subtitle.txt  support_url.txt
BlackBoxApp/fastlane/metadata/review_information/: notes.txt
docs/: MENU_BAR_APP_PLAN.md  decisions.md
include/: blackbox_ffi.h
scripts/: bench-assert.sh  bump-version.sh  check-ffi-header.sh  check-versions.sh  gen-acknowledgments.py  lint-app-store-metadata.py  pre-commit  sync-string-catalog.py
src/: allow.rs  audio_processor.rs  audio_recorder.rs  benchmarking.rs  config.rs  constants.rs  cpal_processor.rs  error.rs  ffi.rs  lib.rs  macos_sample_rate_listener.rs  main.rs  mock_processor.rs  raw_wav_writer.rs  silence_check_worker.rs  test_utils.rs  utils.rs  writer_thread.rs
src/macos/: menu_bar.rs  menu_bar_impl.rs  mod.rs  safe_cocoa.rs
src/tests/: alloc_tests.rs  benchmark_tests.rs  channel_tests.rs  config_tests.rs  cpal_integration_tests.rs  error_tests.rs  ffi_tests.rs  performance_tests.rs  recorder_tests.rs  ring_buffer_tests.rs  shutdown_tests.rs  silence_gate_tests.rs  silence_tests.rs  writer_thread_tests.rs
