[package]
name = "blackbox"
version = "1.0.0"
edition = "2024"
authors = ["David Fisher <tibbon@gmail.com>"]
description = "An audio blackbox for your recording needs"
license = "BUSL-1.1"
default-run = "blackbox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.17"
env_logger = "0.11"
hound = "3.5.1"
chrono = "0.4.31"
log = "0.4"
tempfile = "3.9.0"
ctrlc = "3.4.1"
sysinfo = { version = "0.38", optional = true }
rtrb = "0.3"
thiserror = "2"
toml = "1"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1"
libc = "0.2"

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSThread",
    "NSAutoreleasePool",
    "NSObjCRuntime",
    "NSRunLoop",
    "NSDate",
    "NSGeometry",
    "objc2-core-foundation",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSRunningApplication",
    "NSMenu",
    "NSMenuItem",
    "NSStatusBar",
    "NSStatusItem",
    "NSStatusBarButton",
    "NSButton",
    "NSControl",
    "NSImage",
    "NSEvent",
] }

[lib]
name = "blackbox"
path = "src/lib.rs"
crate-type = ["lib", "staticlib"]

[[bin]]
name = "blackbox"
path = "src/bin/main.rs"

[[bin]]
name = "bench-writer"
path = "src/bin/bench_writer.rs"

[features]
default = ["benchmarking"]
benchmarking = ["dep:sysinfo"]
menu-bar = []
ffi = []

# These lints will only be activated when using cargo clippy
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -2 }
# Allow specific lints that are problematic for this codebase
arc_with_non_send_sync = "allow"
module_name_repetitions = "allow"

[package.metadata.bundle]
name = "BlackBox Audio Recorder"
identifier = "com.dollhousemediatech.blackbox"
icon = ["images/App.icns"]
version = "1.0.0"
copyright = "Copyright (c) 2026 David Fisher. All rights reserved."
category = "public.app-category.utilities"
short_description = "Audio recording application"
long_description = """
A macOS menu bar application for audio recording with multiple modes,
silence detection, and performance monitoring.
"""
osx_minimum_system_version = "10.14"
osx_frameworks = ["AppKit", "Foundation", "CoreAudio"]

[profile.release]
lto = "thin"
codegen-units = 1

[dev-dependencies]
temp-env = "0.3.4"
