[package]
name = "blackbox"
version = "1.4.0"
edition = "2024"
rust-version = "1.95"
authors = ["David Fisher <tibbon@gmail.com>"]
description = "An audio blackbox for your recording needs"
license = "BUSL-1.1"
default-run = "blackbox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.18"
env_logger = "0.11"
hound = "3.5.1"
chrono = "0.4"
log = "0.4"
tempfile = "3"
ctrlc = "3"
sysinfo = { version = "0.39", optional = true }
rtrb = "0.3"
thiserror = "2"
toml = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

# macOS-specific dependencies
# core-foundation backs the CoreAudio sample-rate listener
# (macos_sample_rate_listener.rs). The menu-bar / status-item UI lives in
# Swift (MenuBarExtra), so the objc2 / objc2-foundation / objc2-app-kit tree
# was never referenced from Rust and was removed (DOLL-256).
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[lib]
name = "blackbox"
path = "src/lib.rs"
crate-type = ["lib", "staticlib"]

[[bin]]
name = "blackbox"
path = "src/bin/main.rs"

[[bin]]
name = "bench-writer"
path = "src/bin/bench_writer.rs"
# Drives the real production writer via blackbox::bench_real_pipeline, which
# is gated behind the `benchmarking` feature (DOLL-251). Marking it required
# lets `--all-targets` builds without the feature skip the bin instead of
# failing to resolve the symbol.
required-features = ["benchmarking"]

[features]
default = []
# `benchmarking` pulls in sysinfo for the bench-writer binary and the
# #[ignore]-d benchmark tests. Off by default so the shipped App Store
# build does not link sysinfo.
benchmarking = ["dep:sysinfo"]
ffi = []

# These lints will only be activated when using cargo clippy
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -2 }
# Allow specific lints that are problematic for this codebase
arc_with_non_send_sync = "allow"
module_name_repetitions = "allow"

[package.metadata.bundle]
name = "BlackBox Audio Recorder"
identifier = "com.dollhousemediatech.blackbox"
icon = ["images/App.icns"]
version = "1.4.0"
copyright = "Copyright (c) 2026 David Fisher. All rights reserved."
category = "public.app-category.utilities"
short_description = "Audio recording application"
long_description = """
A macOS menu bar application for audio recording with multiple modes,
silence detection, and performance monitoring.
"""
osx_minimum_system_version = "15.0"
osx_frameworks = ["AppKit", "Foundation", "CoreAudio"]

[profile.release]
lto = "thin"
codegen-units = 1
# Audio app: any panic in production is a bug we want to catch via crash
# reporting, not unwind through. Saves binary size and removes unwinding
# tables from the hot path.
panic = "abort"
strip = true

[dev-dependencies]
temp-env = "0.3"
